@@ -26,6 +26,7 @@ Dist::Zilla::Plugin::PodWeaver              = 4.006
 Dist::Zilla::Plugin::NextRelease            = 5.020
 Dist::Zilla::Plugin::ReadmeAnyFromPod       = 0.142470
 Dist::Zilla::Plugin::AutoMetaResources      = 1.20
+Dist::Zilla::Plugin::CopyFilesFromBuild     = 0
 ; needed for autodie qw( :system );
 IPC::System::Simple                         = 1.25
 Path::Class                                 = 0.31
